# servicepilot-ai

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  compose.production.yml  docker-compose.cloudflare.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 20260722_0001_initial.py
app/: __init__.py  adapters.py  ai.py  application.py  auth.py  config.py  database.py  evaluation.py  knowledge.py  main.py  models.py  schemas.py  security.py  services.py  site.py  webhooks.py  worker.py  workflow.py
app/static/: app.css  marketing.css  production.css
app/templates/: about.html  base.html  contact.html  dashboard.html  home.html  intake.html  login.html  privacy.html  submitted.html  terms.html  ticket.html
deploy/: Caddyfile  cloudflared.example.yml
scripts/: seed.py
tests/: conftest.py  test_docs.py  test_marketing.py  test_workflow.py
