[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "servicepilot-ai"
version = "0.1.0"
description = "Auditable AI service operations agent with human approvals"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
  "sqlalchemy>=2.0,<3",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.7,<3",
  "jinja2>=3.1,<4",
  "python-multipart>=0.0.20,<1",
  "redis>=5.2,<6",
  "rq>=2.1,<3",
  "httpx>=0.28,<1",
  "reportlab>=4.2,<5",
  "structlog>=24.4,<26",
]

[project.optional-dependencies]
dev = ["pytest>=8.3,<9", "pytest-cov>=6,<7", "ruff>=0.9,<1"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --disable-warnings"

